--- a/main.html
+++ b/main.html
@@ -1,44 +1,87 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Registration Form</title>
-	  <link rel="stylesheet" type="text/css" href="styles.css" />
+    <title>Doggo Pupper's Homepage</title>
+    <link href="styles.css" rel="stylesheet">
   </head>
+  
   <body>
-    <h1>Registration Form</h1>
-    <p>Please fill out this form with the required information</p>
-    <form action='https://register-demo.freecodecamp.org'>
-      <fieldset>
-        <label>Enter Your First Name: <input type="text" name="first-name" required /></label>
-        <label>Enter Your Last Name: <input type="text" name="last-name" required /></label>
-        <label>Enter Your Email: <input type="email" name="email" required /></label>
-        <label>Create a New Password: <input type="password" name="password" pattern="[a-z0-5]{8,}" required /></label>
-      </fieldset>
-      <fieldset>
-        <label><input type="radio" name="account-type" class="inline" /> Personal Account</label>
-        <label><input type="radio" name="account-type" class="inline" /> Business Account</label>
-        <label>
-          <input type="checkbox" name="terms" class="inline" required /> I accept the <a href="https://www.freecodecamp.org/news/terms-of-service/">terms and conditions</a>
-			  </label>
-      </fieldset>
-      <fieldset>
-        <label>Upload a profile picture: <input type="file" name="file" /></label>
-        <label>Input your age (years): <input type="number" name="age" min="13" max="120" />
-			  </label>
-        <label>How did you hear about us?
-          <select name="referrer">
-            <option value="">(select one)</option>
-            <option value="1">freeCodeCamp News</option>
-            <option value="2">freeCodeCamp YouTube Channel</option>
-            <option value="3">freeCodeCamp Forum</option>
-            <option value="4">Other</option>
-          </select>
-        </label>
-        <label>Provide a bio:
-          <textarea name="bio" rows="3" cols="30" placeholder="I like coding on the beach..."></textarea>
-			  </label>
-      </fieldset>
-      <input type="submit" value="Submit" />
-    </form>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <h1>Doggo Pupper</h1>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-6">
+          <h2>About Me</h2>
+          <p>
+            Hello. I love
+            <a href="">User Interface Design</a>.
+          </p>
+        </div>
+        <div class="col-md-6">
+          <img src="images/Science-Dog.png"/>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-6">
+          <h2>Classes</h2>
+          <table class="table">
+            <thead>
+              <tr>
+                <th>Course Number</th>
+                <th>Course Title</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td colspan=3>Spring 2016</td>
+              </tr>
+
+              <tr>
+                <td><a href="">6.813</a></td>
+                <td>User Interface Design</td>
+              </tr>
+              <tr>
+                <td><a href="">6.034</a></td>
+                <td>Artificial Intelligence</td>
+              </tr>
+              <tr>
+                <td><a href="">6.006</a></td>
+                <td>Introduction to Algorithms</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+        <div class="col-md-6">
+          <h2>Extracurriculars</h2>
+          <ul>
+            <li> Asian Dance Team
+            <li> DanceTroupe
+            <li> MIT Poker Club
+          </ul>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-9">
+          <h2>Contact</h2>
+          <form>
+            <div class="form-group form-inline">
+              <label for="email">Email:</label>
+              <input type="email" class="form-control" placeholder="Email">
+            </div>
+            <div class="form-group">
+              <label for="message">Message</label>
+              <input type="password" class="form-control" placeholder="">
+            </div>
+            <button type="submit" class="btn btn-default">Submit</button>
+          </form>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
